--- a/css/custom.css
+++ b/css/custom.css
@@ -90,9 +90,30 @@ body{
   /* position:relative; makes it lighter color idk why*/
 }
 
+.itemsContainer{
+  display:flex;
+  flex-direction:column;
+  /* cross axis */
+  align-items:center;
+  /* main axis */
+  justify-content:flex-start;
+  width:30%;
+  min-width:450px;
+  margin:auto;
+  min-height:100vh;
+  background: #42413c;
+  /* position:relative; makes it lighter color idk why*/
+}
+
 .storeContainer h1,
-.foodContainer h1{
+.foodContainer h1,
+.itemsContainer h1{
   margin-top:2rem;
+}
+
+#total_frame{
+  display:flex;
+  justify-content:space-between;
 }
 
 .backButton{
@@ -152,13 +173,15 @@ ul{
 
 /* MANAGE FOOD */
 #manage_stores_container,
-#manage_foods_container{
+#manage_foods_container,
+#select_items_container{
   width:70%;
   margin:20px auto;
 }
 
 #store_options,
-#food_options{
+#food_options,
+#item_options{
   margin:auto;
   display:flex;
   align-items:center;
@@ -169,6 +192,12 @@ ul{
 .manage_foods_delete_container label{
   padding:0;
   margin:0;
+}
+
+#select_foods_list tr > td{
+  transition: color 0s, background .1s;
+  padding-left:10px;
+  cursor:default;
 }
 
 /* NOTIFICATIONS */
